Alterações de estilos

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <a href="#">Profile</a>
         <a href="#">Poke Market</a>
         <a href="#">World Map</a>
+        <a class="logout-btn" href="#">Logout</a>
 
     </div>
 
