Alterações no layout

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="pokemon-info pokemon-about">
-                    <h5>About
+                    <h5 class="about-title">About
                         <span>Pikachu</span>
                     </h5>
                     <p class="pokemon-text">Whenever Pikachu comes across something new, it blasts it with a jolt of electricity. If you come across
